--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Score 4</title>
+    <title>Connect 4</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css"></link>
-    <script src="src/index.js" defer></script>
+    <link rel="stylesheet" href="styles.css"></link>
+    <script src="index.js" defer></script>
   </head>
 
   <body>
