added cutom modal alert for winner, updated README

--- a/index.html
+++ b/index.html
@@ -9,16 +9,27 @@
   </head>
 
   <body>
-    <h1>Connect 4</h1>
-    <div class="controls">
-      <span class="score" id="red">0</span>
-      <button class="btn-start">Start</button>
-      <button class="btn-stop">Stop</button>
-      <span class="score" id="yellow">0</span>   
-    <h3 class="game-status">Now playing: <span id="player"></span></h3>
-    </div>
-    <div class="board">
-
+    <div class="content">
+      <h1>Connect 4</h1>
+      <div class="controls">
+        <span class="score" id="red">0</span>
+        <button class="btn-start">Start</button>
+        <button class="btn-stop">Stop</button>
+        <span class="score" id="yellow">0</span>   
+        <h3 class="game-status">Now playing: <span id="player"></span></h3>
+      </div>
+      <div class="board">
+      </div>
+  
+      <div class="bg-modal">  
+        <div class="modal-content">
+            <span class="close">X</span>
+            <h4>GAME OVER !</h4>
+            <p>
+            </p>    
+        </div>
+      </div>  
+  
     </div>
   </body>
 </html>
